--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                                         <div id="event-4-maplink" class="event-maplink"> <a target="_blank"
                                                 type="button" id="map_2" title="View Map"
                                                 style="text-decoration:none !important;box-shadow:none;"
-                                                href="https://www.google.com/maps/dir/22.6027486,88.4297716/23.2124557,86.5730676/@22.8519583,86.1620466,8z/data=!3m1!4b1!4m11!1m5!3m4!2zMjPCsDEyJzQ0LjgiTiA4NsKwMzQnMjMuMCJF!8m2!3d23.2124557!4d86.5730676!4m4!1m1!4e1!1m0!3e0?hl=en&entry=ttu"
+                                                href="https://www.google.com/maps/place/Jambad,+West+Bengal+723128/@23.2130156,86.5700931,16z/data=!4m6!3m5!1s0x39f6677ac39d3007:0xcf9fc587cc494fe0!8m2!3d23.2134234!4d86.5722478!16s%2Fg%2F1hd_5bljv"
                                                 class="btn btn-link view-map action-link">&nbsp;View Map</a> </div>
                                     </span>
                                 </address>
@@ -182,7 +182,7 @@
                                         <div id="event-4-maplink" class="event-maplink"> <a target="_blank"
                                                 type="button" id="map_2" title="View Map"
                                                 style="text-decoration:none !important;box-shadow:none;"
-                                                href="https://www.google.com/maps/dir/22.6027486,88.4297716/23.2124557,86.5730676/@22.8519583,86.1620466,8z/data=!3m1!4b1!4m11!1m5!3m4!2zMjPCsDEyJzQ0LjgiTiA4NsKwMzQnMjMuMCJF!8m2!3d23.2124557!4d86.5730676!4m4!1m1!4e1!1m0!3e0?hl=en&entry=ttu"
+                                                href="https://www.google.com/maps/place/Jambad,+West+Bengal+723128/@23.2130156,86.5700931,16z/data=!4m6!3m5!1s0x39f6677ac39d3007:0xcf9fc587cc494fe0!8m2!3d23.2134234!4d86.5722478!16s%2Fg%2F1hd_5bljv"
                                                 class="btn btn-link view-map action-link">&nbsp;View Map</a> </div>
                                     </span>
                                 </address>
@@ -213,7 +213,7 @@
                                         <div id="event-4-maplink" class="event-maplink"> <a target="_blank"
                                                 type="button" id="map_2" title="View Map"
                                                 style="text-decoration:none !important;box-shadow:none;"
-                                                href="https://www.google.com/maps/dir/22.6027486,88.4297716/23.2124557,86.5730676/@22.8519583,86.1620466,8z/data=!3m1!4b1!4m11!1m5!3m4!2zMjPCsDEyJzQ0LjgiTiA4NsKwMzQnMjMuMCJF!8m2!3d23.2124557!4d86.5730676!4m4!1m1!4e1!1m0!3e0?hl=en&entry=ttu"
+                                                href="https://www.google.com/maps/place/Jambad,+West+Bengal+723128/@23.2130156,86.5700931,16z/data=!4m6!3m5!1s0x39f6677ac39d3007:0xcf9fc587cc494fe0!8m2!3d23.2134234!4d86.5722478!16s%2Fg%2F1hd_5bljv"
                                                 class="btn btn-link view-map action-link">&nbsp;View Map</a> </div>
                                     </span>
                                 </address>
