--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
 
         .image-banner {
             display: flex;
-            height: 450px;
-            width: 100%;
+            height: 50%;
             justify-content: center;
         }
 
