--- a/index.html
+++ b/index.html
@@ -141,6 +141,12 @@
             flex-direction: column;
             align-items: center;
         }
+        .section-title, .ourstory-all-sections p, .ourstory-all-sections p, .event-name, .travel-head{
+            color: #f84d00 !important;
+        }
+        .event-date, .event-map, .event-details{
+            font-weight: 500;
+        }
     </style>
 </head>
 
@@ -162,7 +168,7 @@
             </div>
         </section>
         <div class="image-banner ">
-            <img class="image" src="./20231021_182649.png" alt="Your Image">
+            <img class="image" src="./Untitled-2.png" alt="Your Image">
             <div class="overlay-text">
             </div>
         </div>
@@ -330,17 +336,17 @@
         document.querySelector('.main-content').style.display = 'block';
     }
     document.addEventListener('click', function () {
-        var audio = document.getElementById('audio');
-        audio.play().catch(function (error) {
-            console.error('Failed to play audio:', error.message);
-        });
+        // var audio = document.getElementById('audio');
+        // audio.play().catch(function (error) {
+        //     console.error('Failed to play audio:', error.message);
+        // });
     });
 
 
     // Simulate a click event after 5 seconds
     setTimeout(function () {
         playAudioAndHideLoader();
-    }, 6000);
+    }, 1000);
 
     document.addEventListener('DOMContentLoaded', function () {
         // Target date: January 31
