--- a/index.html
+++ b/index.html
@@ -219,9 +219,9 @@
                                     <img src="./puspen1.jpg" alt="Profile Photo" class="profile-photo">
                                 </div>
                                 <p id="our-success-story-1-text2">
-                                    PUSPEN SARKAR
+                                 <br>   PUSPEN SARKAR
                                     <br />
-                                    S/O MANORANJAN SARKAR, CHHABI SARKAR
+                                    S/O MANORANJAN SARKAR, CHHABI SARKAR </b>
                                 </p>
                             </div>
                         </div>
@@ -305,6 +305,7 @@
                                                     style="text-decoration:none !important;box-shadow:none;"
                                                     href="https://www.google.com/maps/place/Urma,+West+Bengal+723143/@23.1639859,86.2618053,16z/data=!3m1!4b1!4m6!3m5!1s0x39f67811de78dbcb:0xf342e4dd3abb4675!8m2!3d23.1641578!4d86.2679155!16s%2Fg%2F1tfj1lhw?entry=ttu"
                                                     class="btn btn-link view-map action-link">&nbsp;View Map</a> </div>
+                                        <div id="event-3-day" class="event-date">Time: 7pm</div><br> <br>
                                         </span>
                                     </address>
                                     <div style="margin:10px 0;padding-bottom:30px;"></div>
