--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                                                     style="text-decoration:none !important;box-shadow:none;"
                                                     href="https://www.google.com/maps/place/Urma,+West+Bengal+723143/@23.1639859,86.2618053,16z/data=!3m1!4b1!4m6!3m5!1s0x39f67811de78dbcb:0xf342e4dd3abb4675!8m2!3d23.1641578!4d86.2679155!16s%2Fg%2F1tfj1lhw?entry=ttu"
                                                     class="btn btn-link view-map action-link">&nbsp;View Map</a> </div>
-                                        <div id="event-3-day" class="event-date">Time: 7pm</div><br> <br>
+                                        
                                         </span>
                                     </address>
                                     <div style="margin:10px 0;padding-bottom:30px;"></div>
@@ -336,7 +336,8 @@
                                                     type="button" id="map_2" title="View Map"
                                                     style="text-decoration:none !important;box-shadow:none;"
                                                     href="https://www.google.com/maps/place/Jambad,+West+Bengal+723128/@23.2130156,86.5700931,16z/data=!4m6!3m5!1s0x39f6677ac39d3007:0xcf9fc587cc494fe0!8m2!3d23.2134234!4d86.5722478!16s%2Fg%2F1hd_5bljv"
-                                                    class="btn btn-link view-map action-link">&nbsp;View Map</a> </div>
+                                                    class="btn btn-link view-map action-link">&nbsp;View Map</a> </div> <br>
+                                        <div id="event-3-day" class="event-date">Time: 7pm</div><br> <br>
                                         </span>
                                     </address>
                                     <div style="margin:10px 0;padding-bottom:30px;"></div>
