--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                                     <img src="./puspen1.jpg" alt="Profile Photo" class="profile-photo">
                                 </div>
                                 <p id="our-success-story-1-text2">
-                                 <br>   PUSPEN SARKAR
+                                 <br>  <b> PUSPEN SARKAR
                                     <br />
                                     S/O MANORANJAN SARKAR, CHHABI SARKAR </b>
                                 </p>
@@ -234,9 +234,9 @@
                                     <img src="./shamyali.jpg" class="imagename">
                                 </figure> -->
                                 <p id="our-success-story-2-text2">
-                                    SHYAMALI MAHATO
+                                  <b>  SHYAMALI MAHATO
                                     <br />
-                                    D/O MATILAL MAHATO, SULEKHA MAHATO
+                                    D/O MATILAL MAHATO, SULEKHA MAHATO </b>
                                 </p>
                             </div>
                         </div>
